# sm4sh_model_py

./: .gitignore  Cargo.toml  README.md
sm4sh_model_py/: __init__.py  __init__.pyi  animation.pyi  database.pyi  model.pyi  skinning.pyi  texture.pyi  vertex.pyi
src/: lib.rs
