[package]
name = "sm4sh_model_py"
version = "0.1.0"
edition = "2024"

[dependencies]
sm4sh_model = { git = "https://github.com/ScanMountGoat/sm4sh_lib", rev = "9ff14b8" }
sm4sh_lib = { git = "https://github.com/ScanMountGoat/sm4sh_lib", rev = "9ff14b8" }
pyo3 = { version = "0.25.0", features = ["extension-module", "py-clone"] }
map_py = { git = "https://github.com/ScanMountGoat/map_py", rev = "5640195" }
numpy = "0.25.0"
half = "2.6.0"
image_dds = "0.7.1"
image = "0.25.6"
rayon = "1.7.0"

[build-dependencies]
pyo3-build-config = "0.25.0"

[lib]
name = "sm4sh_model_py"
crate-type = ["cdylib"]
